# DTEAM-django-practical-test

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cv_fixture.json  docker-compose.yaml  pyproject.toml  requirements.txt
CVProject/: celery.py  settings.py  urls.py
audit/: middleware.py  models.py  tests.py  urls.py  views.py
audit/migrations/: 0001_initial.py
audit/templates/audit/: request_logs.html
main/: api_urls.py  api_view.py  context_processors.py  models.py  serializers.py  tasks.py  tests.py  translation.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/templates/main/: base.html  cv_detail.html  cv_list.html  cv_pdf.html  settings.html
